--- a/knowledge.html
+++ b/knowledge.html
@@ -2520,10 +2520,8 @@
             <br>
             <img id="pdfThumbnail" class="modal-thumbnail" src="" alt="PDF thumbnail" />
             <br>
-            <!-- <p id="pdfName">Name:</p><br>
-            <p id="pdfSize">Size:</p><br> -->
-            <p id="pdfName"><strong>Name:</strong> <span id="pdfNameValue"></span></p><br>
-            <p id="pdfSize"><strong>Size:</strong> <span id="pdfSizeValue"></span></p><br>
+            <p id="pdfName">Name:</p><br>
+            <p id="pdfSize">Size:</p><br>
             <a id="readLink" class="read-button" href="" class="pdf-link">Read PDF</a>
             <a id="downloadLink" class="download-button" href="" download>Download PDF</a>
         </div>
