--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Books of I'lm – For The Ummah</title>
+  <title>Books of I'lm For The Ummah</title>
   <style>
     /* 0. IMPORT & ROOT VARIABLES */
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@@ -853,7 +853,7 @@
     /* 📱 Small Screens: 2 cards */
     @media (max-width: 767px) {
       #jsonBookGrid {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
         padding: 1rem;
         gap: 1rem;
       }
