--- a/index.html
+++ b/index.html
@@ -567,6 +567,151 @@
       }
     }
 
+    /* FORM CONTAINER */
+    #cover-form {
+      background: var(--surface);
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 2em;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      max-width: 600px;
+      margin: 2em auto;
+    }
+
+    #cover-form:hover,
+    #cover-form:focus-within {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    /* FORM HEADLINE */
+    #cover-form h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1em;
+      color: var(--fg);
+    }
+
+    /* FORM WRAPPER */
+    #cover-form form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5em;
+    }
+
+    /* FIELD GROUP */
+    .field-group {
+      position: relative;
+      width: 100%;
+      margin-bottom: 1em;
+    }
+
+    /* INPUTS / SELECT / TEXTAREA */
+    .field-group input,
+    .field-group select,
+    .field-group textarea {
+      width: 100%;
+      padding: 1.2em 1em;
+      min-height: 44px;
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      background: var(--alt);
+      font-size: 1rem;
+      color: var(--fg);
+      transition: border-color 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .field-group input:focus,
+    .field-group select:focus,
+    .field-group textarea:focus {
+      border-color: var(--accent);
+      background: var(--surface);
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(255, 143, 0, 0.2);
+    }
+
+    /* FLOATING LABEL */
+    .field-group label {
+      position: absolute;
+      top: 1.4em;
+      left: 1em;
+      padding: 0 0.5em;
+      font-size: 0.95rem;
+      line-height: 1.4;
+      color: var(--muted);
+      background: var(--alt);
+      pointer-events: none;
+      transition: transform 0.3s ease, font-size 0.3s ease, color 0.3s ease, background 0.3s ease;
+    }
+
+    .field-group input:focus+label,
+    .field-group textarea:focus+label,
+    .field-group select:focus+label,
+    .field-group input:not(:placeholder-shown)+label,
+    .field-group textarea:not(:placeholder-shown)+label,
+    .field-group select:not([value=""])+label {
+      transform: translateY(-1.8em) scale(0.9);
+      font-size: 0.85rem;
+      color: var(--accent);
+      background: var(--surface);
+    }
+
+    /* SUBMIT BUTTON + RIPPLE */
+    #cover-form button[type="submit"] {
+      background: var(--primary);
+      color: var(--surface);
+      padding: 0.9em 1.4em;
+      border: none;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+
+    #cover-form button[type="submit"]:hover {
+      background: var(--accent);
+      transform: scale(1.05);
+    }
+
+    #cover-form button[type="submit"]::after {
+      content: "";
+      position: absolute;
+      background: rgba(255, 255, 255, 0.5);
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      pointer-events: none;
+      transform: scale(0);
+      opacity: 0;
+      animation: ripple 0.6s ease-out;
+    }
+
+    @keyframes ripple {
+      to {
+        transform: scale(4);
+        opacity: 0;
+      }
+    }
+
+    /* DARK MODE */
+    body.dark #cover-form {
+      background: var(--alt);
+    }
+
+    body.dark #cover-form input,
+    body.dark #cover-form select,
+    body.dark #cover-form textarea {
+      background: var(--surface);
+      color: var(--fg);
+    }
+
+    body.dark #cover-form label {
+      background: var(--surface);
+    }
+
     /* 9. GRIDS & CARDS */
     .grid,
     .donate-grid {
@@ -1047,45 +1192,77 @@
   </div>
 
 </section>
+<!-- COVER FORM (Above Donation Section) -->
+<section id="cover-form">
+  <h2>Your support keeps this library free and accessible for everyone💖</h2>
+  <form id="user-form">
+    <div class="field-group">
+      <input type="text" id="name" name="name" required placeholder=" " />
+      <label for="name">Full Name</label>
+    </div>
 
-<!-- Donate Section -->
-<section id="donate" class="donate-section container">
-  <h2 style="font-size: 2.2rem; margin-bottom: 0.5em;"> 💖 <span
-      style="color: var(--surface); background: var(--accent); padding: 0.2em 0.6em; border-radius: 8px;"> Sadaqah
-      Jariyah </span> </h2>
-  <p style="font-size: 1.1rem;">Your support keeps this library free and accessible for everyone. Please choose a method
-    below to contribute :</p>
+    <div class="field-group">
+      <input type="email" id="email" name="email" required placeholder=" " />
+      <label for="email">Email Address</label>
+    </div>
+    <div class="field-group">
+      <input type="tel" id="phone" name="phone" placeholder="+1234567890" pattern="^\+(?:[0-9] ?){6,14}[0-9]$" required>
+      <label for="phone">Phone Number</label>
+    </div>
 
-  <div class="donate-grid">
-    <div class="donate-card paypal">
-      <img src="images/paypal.svg" alt="PayPal" />
-      <h3>PayPal</h3>
-      <a href="https://www.paypal.com/donate?hosted_button_id=YOUR_ID" target="_blank" class="btn">
-        Donate via PayPal
-      </a>
+    <div class="field-group">
+      <textarea id="message" name="message" rows="4" placeholder=" "></textarea>
+      <label for="message">Message (optional)</label>
     </div>
-    <div class="donate-card stripe">
-      <img src="images/credit-card.svg" alt="Card" />
-      <h3>Credit / Debit Card</h3>
-      <button id="stripeBtn" class="btn">Donate with Card</button>
+
+    <button type="submit" class="btn">Submit</button>
+  </form>
+</section>
+
+
+<!-- Your original DONATE SECTION (initially hidden) -->
+<section id="donate" class="donate-section container" style="display: none;">
+  <!-- Donate Section -->
+  <section id="donate" class="donate-section container">
+    <h2 style="font-size: 2.2rem; margin-bottom: 0.5em;"> 💖 <span
+        style="color: var(--surface); background: var(--accent); padding: 0.2em 0.6em; border-radius: 8px;"> Sadaqah
+        Jariyah </span> </h2>
+    <p style="font-size: 1.1rem;">Please choose a
+      method
+      below to contribute :</p>
+
+    <div class="donate-grid">
+      <div class="donate-card paypal">
+        <img src="images/paypal.svg" alt="PayPal" />
+        <h3>PayPal</h3>
+        <a href="https://www.paypal.com/donate?hosted_button_id=YOUR_ID" target="_blank" class="btn">
+          Donate via PayPal
+        </a>
+      </div>
+      <div class="donate-card stripe">
+        <img src="images/credit-card.svg" alt="Card" />
+        <h3>Credit / Debit Card</h3>
+        <button id="stripeBtn" class="btn">Donate with Card</button>
+      </div>
+      <div class="donate-card upi">
+        <img src="images/upi.svg" alt="UPI" />
+        <h3>UPI (India)</h3>
+        <img src="images/upi-qr.png" alt="Scan UPI" class="qr" />
+        <p>Scan with Google Pay, PhonePe, etc.</p>
+      </div>
+      <div class="donate-card bank">
+        <img src="images/bank.svg" alt="Bank" />
+        <h3>Bank Transfer</h3>
+        <ul>
+          <li><strong>Account:</strong> Books of Ilm</li>
+          <li><strong>No:</strong> 1234567890</li>
+          <li><strong>IFSC:</strong> ABCD0123456</li>
+          <li><strong>Bank:</strong> Your Bank Name</li>
+        </ul>
+      </div>
     </div>
-    <div class="donate-card upi">
-      <img src="images/upi.svg" alt="UPI" />
-      <h3>UPI (India)</h3>
-      <img src="images/upi-qr.png" alt="Scan UPI" class="qr" />
-      <p>Scan with Google Pay, PhonePe, etc.</p>
-    </div>
-    <div class="donate-card bank">
-      <img src="images/bank.svg" alt="Bank" />
-      <h3>Bank Transfer</h3>
-      <ul>
-        <li><strong>Account:</strong> Books of Ilm</li>
-        <li><strong>No:</strong> 1234567890</li>
-        <li><strong>IFSC:</strong> ABCD0123456</li>
-        <li><strong>Bank:</strong> Your Bank Name</li>
-      </ul>
-    </div>
-  </div>
+  </section>
+
 </section>
 
 <!-- Floating Buttons -->
@@ -1288,6 +1465,23 @@
       });
     });
 
+    //–– REVEAL DONATION SECTION AFTER FORM SUBMISSION ––
+    const coverForm = document.getElementById('cover-form');
+    const userForm = document.getElementById('user-form');
+    const donateSection = document.getElementById('donate');
+
+    if (userForm) {
+      userForm.addEventListener('submit', e => {
+        e.preventDefault();
+        // Optional: collect form data or validate
+
+        // Hide cover form and reveal donation section
+        coverForm.style.display = 'none';
+        donateSection.style.display = 'block';
+        donateSection.scrollIntoView({ behavior: 'smooth' });
+      });
+    }
+
     //–– 4.g. STRIPE CHECKOUT FOR CARD DONATIONS
     const stripe = Stripe('pk_test_YOUR_PUBLISHABLE_KEY');
     document.getElementById('stripeBtn')
@@ -1303,10 +1497,21 @@
       btn.addEventListener('click', e => {
         const circle = document.createElement('span');
         circle.className = 'ripple';
+        ripple.style.left = `${e.offsetX}px`;
+        ripple.style.top = `${e.offsetY}px`;
         btn.appendChild(circle);
         setTimeout(() => circle.remove(), 600);
       });
     });
+    //–– 4.i. AUTO-EXPAND TEXTAREAS ON INPUT
+    document.querySelectorAll('#cover-form textarea').forEach(area => {
+      area.addEventListener('input', () => {
+        area.style.height = 'auto';
+        area.style.height = `${area.scrollHeight}px`;
+      });
+    });
+
+
   });
 
 </script>
