--- a/index.html
+++ b/index.html
@@ -567,144 +567,150 @@
       }
     }
 
-   /* FORM CONTAINER */
-#cover-form {
-  background: var(--surface);
-  border: 1px solid var(--border);
-  border-radius: 12px;
-  padding: 2em;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  max-width: 600px;
-  margin: 2em auto;
-}
-#cover-form:hover,
-#cover-form:focus-within {
-  transform: translateY(-4px);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-}
+    /* FORM CONTAINER */
+    #cover-form {
+      background: var(--surface);
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 2em;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      max-width: 600px;
+      margin: 2em auto;
+    }
 
-/* FORM HEADLINE */
-#cover-form h2 {
-  text-align: center;
-  font-size: 2rem;
-  margin-bottom: 1em;
-  color: var(--fg);
-}
+    #cover-form:hover,
+    #cover-form:focus-within {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
 
-/* FORM WRAPPER */
-#cover-form form {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5em;
-}
+    /* FORM HEADLINE */
+    #cover-form h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1em;
+      color: var(--fg);
+    }
 
-/* FIELD GROUP */
-.field-group {
-  position: relative;
-  width: 100%;
-  margin-bottom: 1em;
-}
+    /* FORM WRAPPER */
+    #cover-form form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5em;
+    }
 
-/* INPUTS / SELECT / TEXTAREA */
-.field-group input,
-.field-group select,
-.field-group textarea {
-  width: 100%;
-  padding: 1.2em 1em;
-  min-height: 44px;
-  border: 1px solid var(--border);
-  border-radius: 10px;
-  background: var(--alt);
-  font-size: 1rem;
-  color: var(--fg);
-  transition: border-color 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
-}
+    /* FIELD GROUP */
+    .field-group {
+      position: relative;
+      width: 100%;
+      margin-bottom: 1em;
+    }
 
-.field-group input:focus,
-.field-group select:focus,
-.field-group textarea:focus {
-  border-color: var(--accent);
-  background: var(--surface);
-  outline: none;
-  box-shadow: 0 0 0 3px rgba(255,143,0,0.2);
-}
+    /* INPUTS / SELECT / TEXTAREA */
+    .field-group input,
+    .field-group select,
+    .field-group textarea {
+      width: 100%;
+      padding: 1.2em 1em;
+      min-height: 44px;
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      background: var(--alt);
+      font-size: 1rem;
+      color: var(--fg);
+      transition: border-color 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
+    }
 
-/* FLOATING LABEL */
-.field-group label {
-  position: absolute;
-  top: 1.4em;
-  left: 1em;
-  padding: 0 0.5em;
-  font-size: 0.95rem;
-  line-height: 1.4;
-  color: var(--muted);
-  background: var(--alt);
-  pointer-events: none;
-  transition: transform 0.3s ease, font-size 0.3s ease, color 0.3s ease, background 0.3s ease;
-}
+    .field-group input:focus,
+    .field-group select:focus,
+    .field-group textarea:focus {
+      border-color: var(--accent);
+      background: var(--surface);
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(255, 143, 0, 0.2);
+    }
 
-.field-group input:focus + label,
-.field-group textarea:focus + label,
-.field-group select:focus + label,
-.field-group input:not(:placeholder-shown) + label,
-.field-group textarea:not(:placeholder-shown) + label,
-.field-group select:not([value=""]) + label {
-  transform: translateY(-1.8em) scale(0.9);
-  font-size: 0.85rem;
-  color: var(--accent);
-  background: var(--surface);
-}
+    /* FLOATING LABEL */
+    .field-group label {
+      position: absolute;
+      top: 1.4em;
+      left: 1em;
+      padding: 0 0.5em;
+      font-size: 0.95rem;
+      line-height: 1.4;
+      color: var(--muted);
+      background: var(--alt);
+      pointer-events: none;
+      transition: transform 0.3s ease, font-size 0.3s ease, color 0.3s ease, background 0.3s ease;
+    }
 
-/* SUBMIT BUTTON + RIPPLE */
-#cover-form button[type="submit"] {
-  background: var(--primary);
-  color: var(--surface);
-  padding: 0.9em 1.4em;
-  border: none;
-  border-radius: 10px;
-  font-weight: 600;
-  cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition: background 0.3s ease, transform 0.2s ease;
-}
-#cover-form button[type="submit"]:hover {
-  background: var(--accent);
-  transform: scale(1.05);
-}
-#cover-form button[type="submit"]::after {
-  content: "";
-  position: absolute;
-  background: rgba(255, 255, 255, 0.5);
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  pointer-events: none;
-  transform: scale(0);
-  opacity: 0;
-  animation: ripple 0.6s ease-out;
-}
-@keyframes ripple {
-  to {
-    transform: scale(4);
-    opacity: 0;
-  }
-}
+    .field-group input:focus+label,
+    .field-group textarea:focus+label,
+    .field-group select:focus+label,
+    .field-group input:not(:placeholder-shown)+label,
+    .field-group textarea:not(:placeholder-shown)+label,
+    .field-group select:not([value=""])+label {
+      transform: translateY(-1.8em) scale(0.9);
+      font-size: 0.85rem;
+      color: var(--accent);
+      background: var(--surface);
+    }
 
-/* DARK MODE */
-body.dark #cover-form {
-  background: var(--alt);
-}
-body.dark #cover-form input,
-body.dark #cover-form select,
-body.dark #cover-form textarea {
-  background: var(--surface);
-  color: var(--fg);
-}
-body.dark #cover-form label {
-  background: var(--surface);
-}
+    /* SUBMIT BUTTON + RIPPLE */
+    #cover-form button[type="submit"] {
+      background: var(--primary);
+      color: var(--surface);
+      padding: 0.9em 1.4em;
+      border: none;
+      border-radius: 10px;
+      font-weight: 600;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+
+    #cover-form button[type="submit"]:hover {
+      background: var(--accent);
+      transform: scale(1.05);
+    }
+
+    #cover-form button[type="submit"]::after {
+      content: "";
+      position: absolute;
+      background: rgba(255, 255, 255, 0.5);
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      pointer-events: none;
+      transform: scale(0);
+      opacity: 0;
+      animation: ripple 0.6s ease-out;
+    }
+
+    @keyframes ripple {
+      to {
+        transform: scale(4);
+        opacity: 0;
+      }
+    }
+
+    /* DARK MODE */
+    body.dark #cover-form {
+      background: var(--alt);
+    }
+
+    body.dark #cover-form input,
+    body.dark #cover-form select,
+    body.dark #cover-form textarea {
+      background: var(--surface);
+      color: var(--fg);
+    }
+
+    body.dark #cover-form label {
+      background: var(--surface);
+    }
 
     /* 9. GRIDS & CARDS */
     .grid,
@@ -1187,12 +1193,18 @@ body.dark #cover-form label {
 
 </section>
 <section id="cover-form">
-  <h2>Your Info</h2>
-  <form id="user-form">
+  <h2>Your support keeps this library free and accessible for everyone💖</h2>
+  <form id="user-form" action="https://api.web3forms.com/submit" method="POST">
+    <input type="hidden" name="access_key" value="87365590-ed8d-489b-9d87-6c4eea8b49b2">
+    <input type="hidden" name="from_name" value="Books of I'lm Donation">
+
     <div class="field-group">
       <input type="text" id="name" name="name" required placeholder=" " />
       <label for="name">Full Name</label>
     </div>
+
+    <input type="hidden" id="ipAddress" name="ipAddress">
+    <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
     <div class="field-group">
       <input type="email" id="email" name="email" required placeholder=" " />
@@ -1200,13 +1212,8 @@ body.dark #cover-form label {
     </div>
 
     <div class="field-group">
-      <select id="country" name="country" required>
-        <option value="" disabled selected hidden></option>
-        <option value="IN">India</option>
-        <option value="US">United States</option>
-        <option value="UK">United Kingdom</option>
-      </select>
-      <label for="country">Country</label>
+      <input type="tel" id="phone" name="phone" placeholder="+1234567890" pattern="^\+(?:[0-9] ?){6,14}[0-9]$" required>
+      <label for="phone">Phone Number</label>
     </div>
 
     <div class="field-group">
@@ -1214,7 +1221,9 @@ body.dark #cover-form label {
       <label for="message">Message (optional)</label>
     </div>
 
-    <button type="submit" class="btn">Submit</button>
+    <div class="h-captcha" data-captcha="true" data-theme="dark" data-onload="myFunction"></div>
+    <button type="submit" class="btn">Continue</button>
+
   </form>
 </section>
 
@@ -1224,7 +1233,7 @@ body.dark #cover-form label {
 <section id="donate" class="donate-section container" style="display: none;">
   <!-- Donate Section -->
   <section id="donate" class="donate-section container">
-    <h2 style="font-size: 2.2rem; margin-bottom: 0.5em;"> 💖 <span
+    <h2 style="font-size: 2.2rem; margin-bottom: 0.5em;"><span
         style="color: var(--surface); background: var(--accent); padding: 0.2em 0.6em; border-radius: 8px;"> Sadaqah
         Jariyah </span> </h2>
     <p style="font-size: 1.1rem;">Please choose a
@@ -1282,6 +1291,19 @@ body.dark #cover-form label {
   <span class="close-preview" aria-label="Close preview">×</span>
   <img src="" alt="Expanded Preview" class="preview-image" />
 </div>
+<!-- <script>
+
+  document.addEventListener("contextmenu", function(e){
+    e.preventDefault();
+  });
+
+ document.addEventListener("keydown", function(e) {
+    if (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "J" || e.key === "C") || e.key === "F12") {
+      e.preventDefault();
+    }
+  });
+
+</script> -->
 
 <script>
   // ===============================
@@ -1462,6 +1484,10 @@ body.dark #cover-form label {
         e.preventDefault();
         const target = document.querySelector(anchor.getAttribute('href'));
         if (target) target.scrollIntoView({ behavior: 'smooth' });
+
+        // Close mobile menu (if open)
+        hamburger.classList.remove('active');
+        menu.classList.remove('open');
       });
     });
 
@@ -1516,18 +1542,79 @@ body.dark #cover-form label {
 
 </script>
 <script src="https://web3forms.com/client/script.js" async defer></script>
-
 <script>
-  const form = document.getElementById('requestForm');
-  form.addEventListener('submit', function (e) {
-    const hCaptcha = form.querySelector('textarea[name=h-captcha-response]').value;
-    if (!hCaptcha) {
-      e.preventDefault();
-      alert("Please fill out captcha field");
-      return;
+  async function getIpAddress() {
+    try {
+      const response = await fetch('https://api.ipify.org?format=json');
+      const data = await response.json();
+      document.getElementById('ipAddress').value = data.ip;
+    } catch (error) {
+      console.error('Error fetching IP address:', error);
+    }
+  }
+  window.onload = getIpAddress;
+</script>
+<script>
+  const form = document.getElementById('user-form');
+  const cover = document.getElementById('cover-form');
+  const donate = document.getElementById('donate');
+
+  form.addEventListener('submit', async e => {
+    e.preventDefault();
+
+    // 1) Validate hCaptcha
+    const token = form.querySelector('textarea[name="h-captcha-response"]')?.value;
+    if (!token) {
+      return alert('Please complete the captcha');
+    }
+
+    // 2) Build FormData
+    const data = new FormData(form);
+
+    try {
+      // 3) Send via fetch without auto‐following redirects
+      const res = await fetch('https://api.web3forms.com/submit', {
+        method: 'POST',
+        body: data,
+        redirect: 'manual'
+      });
+
+      // 4) 302 redirect or JSON success → reveal donation
+      if (res.status === 302) {
+        return handleSuccess();
+      }
+      const json = await res.json();
+      if (json.success) {
+        return handleSuccess();
+      }
+
+      // 5) API flagged an error
+      return handleError(json.message);
+
+    } catch (err) {
+      // 6) Parsing HTML or network hiccup → still treat as success
+      console.warn('Fetch/parse error, assuming success:', err);
+      return handleSuccess();
     }
   });
+
+  // On successful submission
+  function handleSuccess() {
+    // Native browser alert
+    alert('✅ Jazakallah Khair');
+    // Hide cover, show donate UI
+    cover.style.display = 'none';
+    donate.style.display = 'block';
+    donate.scrollIntoView({ behavior: 'smooth' });
+  }
+
+  // On API-reported error
+  function handleError(msg) {
+    alert('Submission failed: ' + (msg || 'Unknown error'));
+  }
 </script>
+
+
 </body>
 
 </html>
