--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 
   <title>Books of I'lm For The Ummah</title>
   <style>
+
     /* 0. IMPORT & ROOT VARIABLES */
+
+html {
+  scroll-padding-top: 100px;
+  scroll-behavior: smooth;
+}
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
     :root {
@@ -314,6 +320,11 @@
     }
 
     /* 6. SECTION HEADERS */
+
+section {
+  scroll-margin-top: 100px;
+}
+
     .section-header {
       display: flex;
       justify-content: space-between;
@@ -1006,6 +1017,8 @@
 
     /* Mobile devices */
     @media (max-width: 768px) {
+
+
       .sticky {
         flex-direction: column;
         align-items: flex-start;
@@ -1157,7 +1170,7 @@
         </ul>
       </li>
 
-      <li><a href="#donate">Donate</a></li>
+      <li><a href="#cover-form">Donate</a></li>
     </ul>
   </nav>
 
@@ -1477,19 +1490,24 @@
       hamburger.classList.toggle('active');
       menu.classList.toggle('open');
     });
+//–– 4.f. SMOOTH SCROLL WITH OFFSET FOR INTERNAL ANCHORS
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+  anchor.addEventListener('click', function (e) {
+    e.preventDefault();
+    const target = document.querySelector(this.getAttribute('href'));
+    if (target) {
+      const offset = window.innerWidth < 768 ? 120 : 100; // Adjust for mobile vs desktop
+      const top = target.getBoundingClientRect().top + window.scrollY - offset;
 
-    //–– 4.f. SMOOTH SCROLL FOR INTERNAL ANCHORS
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', e => {
-        e.preventDefault();
-        const target = document.querySelector(anchor.getAttribute('href'));
-        if (target) target.scrollIntoView({ behavior: 'smooth' });
+      window.scrollTo({ top, behavior: 'smooth' });
+    }
 
-        // Close mobile menu (if open)
-        hamburger.classList.remove('active');
-        menu.classList.remove('open');
-      });
-    });
+    // Close mobile menu (if open)
+    hamburger.classList.remove('active');
+    menu.classList.remove('open');
+  });
+});
+
 
     //–– REVEAL DONATION SECTION AFTER FORM SUBMISSION ––
     const coverForm = document.getElementById('cover-form');
@@ -1519,16 +1537,17 @@
       });
 
     //–– 4.h. RIPPLE EFFECT ON BUTTONS
-    document.querySelectorAll('.btn').forEach(btn => {
-      btn.addEventListener('click', e => {
-        const circle = document.createElement('span');
-        circle.className = 'ripple';
-        ripple.style.left = `${e.offsetX}px`;
-        ripple.style.top = `${e.offsetY}px`;
-        btn.appendChild(circle);
-        setTimeout(() => circle.remove(), 600);
-      });
-    });
+   document.querySelectorAll('.btn').forEach(btn => {
+  btn.addEventListener('click', e => {
+    const circle = document.createElement('span');
+    circle.className = 'ripple';
+    circle.style.left = `${e.offsetX}px`;
+    circle.style.top = `${e.offsetY}px`;
+    btn.appendChild(circle);
+    setTimeout(() => circle.remove(), 600);
+  });
+});
+
     //–– 4.i. AUTO-EXPAND TEXTAREAS ON INPUT
     document.querySelectorAll('#cover-form textarea').forEach(area => {
       area.addEventListener('input', () => {
